# wasmgrind

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: pages.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md  wasmgrind.md
book/src/developers_guide/: alloc_exposer.md  further_reading.md  general_concepts.md  project_structure.md  race_detection.md  wasm_threadify.md  wasm_threadlink.md  wasmgrind.md  wasmgrind_core.md  wasmgrind_error.md  wasmgrind_js.md  wasmgrind_macros.md
book/src/developers_guide/project_structure/: error_handling.md  the_internal_api.md
book/src/developers_guide/race_detection/: overlaps.md  rapid_bin.md  tracing.md
book/src/developers_guide/wasm_threadify/: general_precautions.md  thread_destruction.md  thread_initialization.md  thread_local_stack.md  thread_local_storage.md  utility_functions.md
book/src/developers_guide/wasmgrind/: native_tmgmt.md  runtime_contexts.md  standalone_runtime.md  tracing_runtime.md
book/src/developers_guide/wasmgrind_core/: other_wrappers.md  thread_management.md  wasm_instrumentation.md
book/src/developers_guide/wasmgrind_js/: js_bindings.md  js_runtime_environment.md  js_tmgmt.md  npm_package.md  wgrind_web_workers.md
book/src/user_guide/: compiling_the_binary.md  getting_started.md  native_environments.md  web_environments.md
book/src/user_guide/compiling_the_binary/: using_wasm_threadlink.md
crates/alloc-exposer/: Cargo.toml  README.md
crates/alloc-exposer/src/: lib.rs  link.rs
crates/race-detection/: Cargo.toml
crates/race-detection/src/: generic.rs  lib.rs  main.rs  std_format.rs  tracing.rs
crates/race-detection/src/rapidbin/: encoder.rs
crates/race-detection/src/tracing/: converter.rs  metadata.rs  representation.rs
crates/race-detection/src/tracing/metadata/: analysis.rs
crates/trace-tools/: Cargo.toml  README.md
crates/trace-tools/src/: lib.rs  main.rs  rapidbin.rs
crates/trace-tools/src/rapidbin/: parser.rs
crates/wasm-threadify/: Cargo.toml  README.md
crates/wasm-threadify/src/: lib.rs
crates/wasm-threadlink/: Cargo.toml  README.md
crates/wasm-threadlink/src/: lib.rs  mutex.rs  thread.rs  wasm_abi.rs
crates/wasmgrind-core/: Cargo.toml  README.md
crates/wasmgrind-core/src/: instrumentation.rs  lib.rs  patching.rs  threadify.rs  tmgmt.rs  tracing.rs
crates/wasmgrind-core/src/tracing/: converter.rs  metadata.rs  representation.rs  trace.rs
crates/wasmgrind-core/src/tracing/metadata/: analysis.rs
crates/wasmgrind-core/src/tracing/trace/: cursor.rs  registry.rs  tls.rs
crates/wasmgrind-error/: Cargo.toml
crates/wasmgrind-error/src/: lib.rs
crates/wasmgrind-js/: Cargo.toml  README.md
crates/wasmgrind-js/js/: helpers.js  worker.js
crates/wasmgrind-js/src/: closures.rs  coms.rs  context.rs  lib.rs  message.rs  runtime.rs  tmgmt.rs
crates/wasmgrind-js/src/closures/: threadlink.rs  wasmgrind.rs
crates/wasmgrind-js/src/coms/: threadlink.rs  wasmgrind.rs
crates/wasmgrind-js/src/context/: threadlink.rs  wasmgrind.rs
crates/wasmgrind-js/src/runtime/: threadlink.rs  wasmgrind.rs
crates/wasmgrind-macros/: Cargo.toml
crates/wasmgrind-macros/src/: lib.rs  thread_create.rs  thread_join.rs
crates/wasmtime-wali/: .gitignore  Cargo.toml  README.md
crates/wasmtime-wali/src/: ctx.rs  lib.rs  memory.rs  systypes.rs
crates/wasmtime-wali/src/ctx/: impls.rs  provider.rs  utils.rs
crates/wasmtime-wali/src/ctx/impls/: event.rs  fs.rs  io.rs  ioctl.rs  mm.rs  net.rs  proc.rs  signal.rs  time.rs  wali.rs
demos/browser-demo/: README.md  index.html  index.js  minimal_test.wasm  minimal_test_tracing.wasm  package-lock.json  package.json  webpack.config.mjs
examples/: custom_import.rs  deadlock_test.rs  minimal_test.rs
src/: cli.rs  cmd.rs  lib.rs  main.rs  runtime.rs  standalone.rs  tmgmt.rs  tracing.rs
src/cmd/: dump.rs  run.rs  trace.rs
src/runtime/: base.rs  context_provider.rs  tracing.rs
src/standalone/: ctx.rs
src/standalone/ctx/: provider.rs
src/tracing/: ctx.rs
wasm-artifacts/: Cargo.toml  rust-toolchain.toml
wasm-artifacts/custom-import/: Cargo.toml
wasm-artifacts/custom-import/src/: lib.rs
wasm-artifacts/deadlock-test/: Cargo.toml
wasm-artifacts/deadlock-test/src/: lib.rs
wasm-artifacts/minimal-test/: Cargo.toml
wasm-artifacts/minimal-test/src/: lib.rs
