[package]
name = "wasm-threadlink"
version = "0.1.0"
authors = ["Michael Staab <afkoffee@protonmail.com>"]
license = "MIT or Apache-2.0"
edition = "2024"

[dependencies]
parking_lot = { version = "0.12.3", features = ["nightly"] }
alloc-exposer = { path = "../alloc-exposer" }
wasmgrind-error = { path = "../wasmgrind-error" }

[features]
tracing = []