[package]
name = "wasmgrind-core"
version = "0.1.0"
authors = ["Michael Staab <afkoffee@protonmail.com>"]
license = "MIT or Apache-2.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bitcode = "0.6.9"
log = { workspace = true }
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
trace-tools = { path = "../trace-tools" }
walrus = { workspace = true, features = ["parallel"] }

[dev-dependencies]
rand_xoshiro = "0.7.0"
tempfile = "3.20.0"