[package]
name = "wasmgrind-js"
version = "0.1.0"
authors = ["Michael Staab <afkoffee@protonmail.com>"]
license = "MIT or Apache-2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasmgrind-core = { path = "../wasmgrind-core" }
wasmgrind-error = { path = "../wasmgrind-error" }
race-detection = { path = "../race-detection" }
wasm-bindgen = "0.2.100"
anyhow = "1.0.98"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
crossbeam-channel = "0.5.15"
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "Url",
    "Worker",
    "DedicatedWorkerGlobalScope",
    "MessageEvent"
]
